# allude

./: README.md  pyproject.toml  setup.cfg
.github/workflows/: ci.yml
allude/: __init__.py  base.py  util.py
allude/examples/: gantt.py  sequence_diagram.py
docs/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  table_of_contents.html
docs/_modules/: index.html
docs/_modules/allude/: base.html
docs/_sources/: index.rst.txt
docs/_sources/module_docs/: allude.rst.txt
docs/_sources/module_docs/allude/: base.rst.txt  util.rst.txt
docs/module_docs/: allude.html
docs/module_docs/allude/: base.html  util.html
docsrc/: table_of_contents.rst
