[metadata]
name = allude
version = 0.1.2
url = https://github.com/i2mint/allude
platforms = any
description_file = README.md
root_url = https://github.com/i2mint/
license = apache-2.0
author = OtoSense
description = Building precise functionality from vague specifications
long_description = file:README.md
long_description_content_type = text/markdown
keywords = 
display_name = allude

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires =
    i2
    lined
    meshed

